# CustomKeyboard

./: .gitignore  Alarms.xml  BSECLibrary64.exp  BSECLibrary64.lib  CMakeLists.txt  Cmds.xml  CustomKeyboard.cpp  CustomKeyboard.h  CustomKeyboard.rc  CustomKeyboard.sln  CustomKeyboard.vcxproj  CustomKeyboard.vcxproj.filters  CustomMacro.cpp  CustomMacro.h  DataSender.xml  Database.cpp  Database.h  DirectoryBackup.cpp  DirectoryBackup.h  FrameMapping.xml  GuiEditor.cpp  LICENSE.md  Logger.cpp  Logger.h  MinerWatchdog.cpp  Modbus.xml  Notification.cpp  Notification.h  PathSeparator.cpp  PrintScreenSaver.cpp  PrintScreenSaver.h  README.md  RxList.xml  Sensors.cpp  Sensors.h  Server.cpp  Server.h  Session.cpp  Session.h  Settings.cpp  (+12 more)
Graphs/: Line Chart Multiple Axes.html  template.html
UnitTests/: DirectoryBackupTests.cpp  EscaperTest.cpp  LoggerTests.cpp  StructParserTest.cpp  StructParserTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  pch.cpp  pch.hpp
UnitTests/libs/fmt/: locale.h
gui/: Editor.cpp  Editor.h  EscaperPanel.h  LogPanel.cpp  MainPanel.cpp  MainPanel.h  TrayIcon.h  gui_id.h  main_frame.cpp  main_frame.h
libs/: CMakeLists.txt
libs/bitfield/: 8byte.c  bitfield.c  read.c  write.c
libs/enumser/: enumser.cpp  enumser.h
libs/isotp/: isotp.c  isotp_config.h
libs/sha256/: sha256.c  sha256.h
libs/wxCharts/include/wx/charts/: wxcharts.h
src/: Alarms.cpp  Alarms.hpp  AntiLock.cpp  AntiLock.h  AntiLock.hpp  BsecHandler.cpp  BsecHandler.hpp  CMakeLists.txt  CanDeviceLawicel.cpp  CanDeviceLawicel.hpp  CanDeviceStm32.cpp  CanDeviceStm32.hpp  CanEntryHandler.cpp  CanEntryHandler.hpp  CanScriptHandler.cpp  CanScriptHandler.hpp  CanSerialPort.cpp  CanSerialPort.hpp  CmdExecutor.cpp  CmdExecutor.hpp  CorsairHid.cpp  CorsairHid.hpp  CryptoPrice.cpp  CryptoPrice.hpp  CustomKeyboard.cpp  CustomKeyboard.h  CustomKeyboard.hpp  CustomMacro.cpp  CustomMacro.h  CustomMacro.hpp  DataSender.cpp  DataSender.hpp  DataSerialPort.cpp  DataSerialPort.hpp  Database.cpp  Database.h  DatabaseImpl.cpp  DatabaseImpl.h  DatabaseImpl.hpp  DatabaseLogic.cpp  (+77 more)
src/gui/: AlarmPanel.cpp  AlarmPanel.hpp  CMakeLists.txt  CanPanel.cpp  CanPanel.hpp  CmdExecutorPanel.cpp  CmdExecutorPanel.hpp  Configuration.cpp  Configuration.h  Configuration.hpp  ConfigurationBackup.cpp  ConfigurationBackup.h  ConfigurationBackup.hpp  DataSenderPanel.cpp  DataSenderPanel.hpp  DebugPanel.cpp  DebugPanel.hpp  DidPanel.cpp  DidPanel.hpp  Editor.cpp  Editor.hpp  EscaperPanel.cpp  EscaperPanel.hpp  FilePanel.cpp  FilePanel.h  FilePanel.hpp  LogPanel.cpp  LogPanel.h  LogPanel.hpp  MainFrame.cpp  MainFrame.hpp  MainPanel.cpp  MainPanel.h  MainPanel.hpp  MapConverterPanel.cpp  MapConverterPanel.hpp  ModbusMasterPanel.cpp  ModbusMasterPanel.hpp  ParserPanel.cpp  ParserPanel.h  (+10 more)
src/gui/CanPanel/: BitEditorDialog.cpp  BitEditorDialog.hpp  CanLogPanel.cpp  CanLogPanel.hpp  CanPanel.cpp  CanPanel.hpp  CanScriptPanel.cpp  CanScriptPanel.hpp  CanSenderPanel.cpp  CanSenderPanel.hpp  CanUdsRawDialog.cpp  CanUdsRawDialog.hpp  pch.hpp
src/interface/: IAlarmEntryLoader.hpp  IBasicGuiCustomization.hpp  ICanDevice.hpp  ICanEntry.hpp  ICanObserver.hpp  ICanResultPanel.hpp  ICmdExecutor.hpp  ICmdHelper.hpp  IDataSender.hpp  IDatabase.hpp  IDidLoader.hpp  ILogHelper.hpp  IModbusEntry.hpp  ISerialPort.hpp  ITcpMessageExecutor.hpp
src/utils/: AsyncSerial.cpp  AsyncSerial.hpp  CMakeLists.txt  CSingleton.h  CSingleton.hpp
test_files/: TestConverter.map
utils/: crc16.cpp  crc16.h
utils/wxCharts/include/wx/charts/: wxcharts.h
